# SymbolicRegression

./: CMakeLists.txt  random_generator.el  readme.md  seeds.csv  seeds.csv~
data/: SR_circle.csv  SR_div.csv  SR_ellipse_noise.csv  concrete.csv  concrete.txt  fixdata.py  fixdata.py~  fixed.csv  readme.txt
docs/: bibliography.bib  report.aux  report.bbl  report.blg  report.dvi  report.html  report.out  report.tex  report.tex~  report_ind.html  reports.html
experiments/: launch.sh  launch.sh~  run_tests.py  run_tests.py~
lib/: CMakeLists.txt  CMakeLists.txt~
src/: #symbolic_regression.cpp#  .#symbolic_regression.cpp  CMakeLists.txt  CMakeLists.txt~  commom_types.hpp~  common_types.hpp  individual.hpp  individual.hpp~  interactivity.cpp  interactivity.cpp~  load_data.cpp  load_data.cpp~  load_data.hpp  load_data.hpp~  main.cpp  main.cpp~  node  node.cpp  node.cpp~  node.hpp  protected_functions.cpp  protected_functions.cpp~  random  random.cpp  random.cpp~  random.hpp  random.hpp~  random2.cpp  random2.cpp~  random2.hpp  random2.hpp~  sreg  statistics  statistics.cpp  statistics.cpp~  statistics.hpp  statistics.hpp~  stats  symbolic_regression.cpp  symbolic_regression.hpp  (+3 more)
